# wordflow

./: .env.example  .gitignore  LICENSE  README.md  config.py  database.db  main.py  pyproject.toml  requirements.txt  test_config.py
app/: config.py  main.py  tempCodeRunnerFile.py
app/bot/: __init__.py  handlers.py  utils.py
app/core/: interaction.py  models.py  trainer_impl.py  translator.py
app/interfaces/: interaction.py
app/repositories/: Scheme.sql  database.db  sqlite_repositories.py  sqlite_word_repository.py
app/services/: ocr_func.py
app/services/ocr/: __init__.py  fallback_easyocr.py  google_vision.py  image_preprocessing.py  ocr_service.py
app/services/parser/: language_detector.py  normalizer.py  vocabulary_parser.py
tests/: test_ocr.py  test_placeholder.py
